specs/python-amd-debug-tools.spec
Name:           python-amd-debug-tools
Version:        0.2.12
Release:        %autorelease
Summary:        Helpful tools for debugging AMD Zen systems

License:        MIT
URL:            https://git.kernel.org/pub/scm/linux/kernel/git/superm1/amd-debug-tools.git
Source0:        %{url}/snapshot/amd-debug-tools-%{version}.tar.gz
# PKG-INFO is not a static file, it is generated by building
# python3 -m build
# We use a different build process so we need to manually add the file.
# Do the above command then untar the dist/amd_debug_tools-* to find it.
Source1:        PKG-INFO

# A source only package
BuildArch:      noarch
# But only runs on arches that also support amdgpu kernel driver
ExclusiveArch:  x86_64 aarch64 ppc64le riscv64

BuildRequires:  python3-devel
BuildRequires:  python3dist(setuptools)
BuildRequires:  pyproject-rpm-macros

%global _description %{expand:
This repository hosts open tools that are useful for debugging
issues on AMD systems.}

%description %_description

%package -n     python3-amd-debug-tools
Summary:        %{summary}

Requires:       acpica-tools
Requires:       ethtool
Requires:       libdisplay-info-tools
Requires:       v4l-utils

%description -n python3-amd-debug-tools %_description

%prep
%autosetup -p1 -n amd-debug-tools-%{version}
cp -p %{SOURCE1} .

# remove cysystemd
sed -i -e '/cysystemd/d' pyproject.toml
# E: non-executable-script /usr/lib/python3.14/site-packages/amd_debug
sed -i -e '/#!/d' src/amd_debug/*.py
sed -i -e '/#!/d' src/amd_debug/s2idle-hook

%generate_buildrequires
%pyproject_buildrequires

%build
%pyproject_wheel

%install
%pyproject_install
%pyproject_save_files -l amd_debug

# remove test things
rm -f %{buildroot}%{python3_sitelib}/{,__pycache__/}launcher*
rm -f %{buildroot}%{python3_sitelib}/{,__pycache__/}test*

%check
%pyproject_check_import

%files -n python3-amd-debug-tools -f %{pyproject_files}
%doc docs/amd-*.md
%{_bindir}/amd-*


%changelog
%autochangelog
